--- a/page1.html
+++ b/page1.html
@@ -26,7 +26,8 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8414833858137696"
+     crossorigin="anonymous"></script>
   
 </head>
 <body>
